[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Scripts/HUDOverlay.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/hearth.png" type="Texture" id=2]

[node name="HUDOverlay" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_right = 984.0
margin_bottom = 560.0
custom_constants/separation = 10

[node name="Heart1" type="TextureRect" parent="Control/HBoxContainer"]
margin_right = 75.0
margin_bottom = 560.0
texture = ExtResource( 2 )

[node name="Heart2" type="TextureRect" parent="Control/HBoxContainer"]
margin_left = 85.0
margin_right = 160.0
margin_bottom = 560.0
texture = ExtResource( 2 )

[node name="Heart3" type="TextureRect" parent="Control/HBoxContainer"]
margin_left = 170.0
margin_right = 245.0
margin_bottom = 560.0
texture = ExtResource( 2 )
